--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             socket = io.connect();
 
             socket.on("connect", function() {
-                console.log("Connected to WebSocket server");
+                alert("Connected to WebSocket server");
             });
 
             socket.on("message", function(data) {
